--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,8 @@ html, body {
   margin: 0;
   padding: 0;
   background: #0a0a0a;
-  /* If you add a background image at public/images/bg.jpg it will be used here */
-  background-image: url('/images/bg.jpg');
+  /* background image is provided at runtime by _app via --site-bg variable */
+  background-image: var(--site-bg, none);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
